# ChatZiPT

./: .env.example  LICENSE  Main system  README.md  pyproject.toml  requirements.txt
chatzipt/: __init__.py  cli.py  config.py  core.py
dashboard/: .dockerignore  .gitignore  Dockerfile.dashboard  Dockerfile.manager  Dockerfile.worker  README.md  app.py  dashboard.py  docker-compose.yml  requirements.txt  run_all.bat  run_xau_signal.bat  telegram_dashboard.py  test_env.py  test_imports.py  xau_signal.py  zpt_analysis.py  zpt_manager.py  zpt_pricefeed.py  zpt_worker.py
dashboard/utils/: __init__.py  config.py  performance.py  risk.py  sn.py  zpt_utils.py
tests/: test_core.py
